--- a/views/includes/navbarCampeur.ejs
+++ b/views/includes/navbarCampeur.ejs
@@ -17,14 +17,14 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a class="button is-light" href="/campeur">
-                        <strong>réservations</strong>
+                    <a class="button is-light" href="/campeur/compte">
+                        <strong>compte</strong>
                     </a>
                     <a class="button is-warning" href="/campeur/signaler">
                         <strong>signaler</strong>
                     </a>
-                    <a class="button is-light" href="/campeur/compte">
-                        <strong>compte</strong>
+                    <a class="button is-light" href="/campeur">
+                        <strong>accueil</strong>
                     </a>
                     <a class="button is-primary" href="/deconnexion">
                         déconnexion
