--- a/views/includes/navbarManager.ejs
+++ b/views/includes/navbarManager.ejs
@@ -17,14 +17,14 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a class="button is-light" href="/manager">
-                        <strong>dashboard</strong>
+                    <a class="button is-light" href="/manager/personnel">
+                        <strong>personnel</strong>
                     </a>
                     <a class="button is-warning" href="/manager/incidents">
                         <strong>incidents</strong>
                     </a>
                     <a class="button is-light" href="/manager/personnel">
-                        <strong>personnel</strong>
+                        <strong>accueil</strong>
                     </a>
                     <a class="button is-primary" href="/deconnexion">
                         déconnexion
