--- a/views/includes/navbarPersonnel.ejs
+++ b/views/includes/navbarPersonnel.ejs
@@ -18,10 +18,7 @@
             <div class="navbar-item">
                 <div class="buttons">
                     <a class="button is-light" href="/personnel">
-                        <strong>dashboard</strong>
-                    </a>
-                    <a class="button is-warning" href="/personnel/incidents">
-                        <strong>incidents</strong>
+                        <strong>accueil</strong>
                     </a>
                     <a class="button is-primary" href="/deconnexion">
                         déconnexion
