--- a/views/index/contact.ejs
+++ b/views/index/contact.ejs
@@ -3,20 +3,18 @@
 <%- include('../includes/navbar'); -%>
 
 
-<section class="container margin-top-1 ovhi">
+<section class="container margin-top-1 margin-bottom-1">
   <div class="columns is-centered is-mobile">
-    <div class="column is-narrow has-text-centered">
-      <h1 class="title is-size-1 has-text-left">Contact</h1>
-      <h2 class="subtitle is-size-6 has-text-primary has-text-left">Ils travaillent ici</h2>
-    </div>
+      <div class="column is-narrow has-text-centered">
+          <h1 class="title is-1 has-text-left">Contact</h1>
+          <h2 class="subtitle has-text-primary has-text-left">Envoyez vos souvenirs</h2>
+      </div>
   </div>
 </section>
 
-
-
-<section class="container ovhi pad">
-  <div class="columns is-centered margin-top-1">
-    <div class="column is-4-desktop is-half-tablet">
+<<section>
+  <div class="columns is-centered">
+    <div class="column is-4-desktop is-6-tablet is-10-mobile is-offset-1-mobile has-text-centered">
       <article class="panel is-primary">
         <a class="panel-block is-active" href="tel:+33351675***">
           <span class="panel-icon">
