--- a/views/campeur/signaler.ejs
+++ b/views/campeur/signaler.ejs
@@ -2,59 +2,64 @@
 
 <%- include('../includes/navbarCampeur'); -%>
 
-<div class="ovhi">
-    <section class="container margin-top-1">
-        <div class="columns columns is-centered is-mobile">
-            <div class="column is-narrow has-text-centered">
-    
-                <h1 class="title is-size-1 has-text-left">Signaler</h1>
-                <h2 class="subtitle is-size-6 has-text-primary has-text-left">un incident</h2>
-    
-                <form method="post" class="margin-top-1">
-                    <div class="field">
-                        <div class="select">
-                            <select name="type" id="type">
-                                <%if(types){%>
-                                    <% for(var i=0; i < types.length; i++) { %>
-                                        <option value="<%=types[i].id%>"><%=types[i].libelle%></option>
-                                    <%}%>
-                                <%}%>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="field">
-                        <div class="select">
-                            <select name="infrastructure" id="infrastructure">
-                                <%if(infrastructures){%>
-                                    <% for(var i=0; i < infrastructures.length; i++) { %>
-                                        <option value="<%=infrastructures[i].id%>"><%=infrastructures[i].libelle%></option>
-                                    <%}%>
-                                <%}%>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="control has-text-centered margin-button">
-                        <button type="submit" class="button is-rounded">Envoyer</button>   <!-- Creation -->
-                    </div>
-                </form>
-    
-                <a href="/connexion" class="button is-primary is-inverted">Annuler</a>  <!-- Annulation -->           
-            </div>
+<section class="container margin-top-1 margin-bottom-1">
+    <div class="columns is-centered is-mobile">
+        <div class="column is-narrow has-text-centered">
+            <h1 class="title is-1 has-text-left">Signaler</h1>
+            <h2 class="subtitle has-text-primary has-text-left">Un incident</h2>
         </div>
-        <div class="columns columns is-centered is-mobile">
-            <div class="column is-half has-text-centered">
-            <% if (locals.flash) { %>
+    </div>
+</section>
+
+<section>
+    <% if(locals.flash){ %>
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-3-desktop is-4-tablet is-6-mobile is-offset-3-mobile has-text-centered">
                 <div class="notification is-<%= flash.type %>">
                     <button class="delete"></button>
                     <%= locals.flash.text %>
                 </div>
-                <%}%>
             </div>
         </div>
-    </section>
-</div>
+    <% } %>
+</section>
+ 
+<section>
+    <div class="columns is-centered">
+        <div class="column is-3-desktop is-4-tablet is-6-mobile is-offset-3-mobile has-text-centered">
+            <form method="post">
+                <div class="field">
+                    <div class="select">
+                        <select name="type" id="type">
+                            <%if(types){%>
+                                <% for(var i=0; i < types.length; i++) { %>
+                                    <option value="<%=types[i].id%>"><%=types[i].libelle%></option>
+                                <%}%>
+                            <%}%>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="field">
+                    <div class="select">
+                        <select name="infrastructure" id="infrastructure">
+                            <%if(infrastructures){%>
+                                <% for(var i=0; i < infrastructures.length; i++) { %>
+                                    <option value="<%=infrastructures[i].id%>"><%=infrastructures[i].libelle%></option>
+                                <%}%>
+                            <%}%>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="control has-text-centered margin-button">
+                    <button type="submit" class="button is-primary is-small is-rounded is-outlined">Envoyer</button>
+                    <a class="button is-secondary is-small is-rounded is-outlined" href="/connexion">Retour</a>
+                </div>
+            </form>                      
+        </div>
+    </div>
+</section>
 
 <script src="/js/notifications.js"></script>
 
