--- a/views/includes/errors.ejs
+++ b/views/includes/errors.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/header'); -%>
 
 <section class="container margin-top-1">
-  <div class="columns columns is-mobile">
+  <div class="columns is-mobile">
       <div class="column is-half is-offset-one-quarter has-text-centered">
         <h1 class="title is-size-1 is-family-code"><%= locals.status %></h1>
         <h2 class="subtitle is-size-6 has-text-primary is-family-code"><%= locals.code %></h2>
