--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,5 @@
-        <footer class="footer margin-top-1 ovhi">
+        
+        <footer class="footer margin-top-1">
             <div class="columns">
 
                 <div class="column has-text-centered">
@@ -36,5 +37,6 @@
 
             </div>
         </footer>
+    </div>
     </body>
 </html>
