--- a/views/index/a_propos.ejs
+++ b/views/index/a_propos.ejs
@@ -2,16 +2,16 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section class="container margin-top-1 ovhi">
-    <div class="columns columns is-centered is-mobile">
-        <div class="column is-narrow has-text-centered">
-            <h1 class="title is-size-1 has-text-left">A propos</h1>
-            <h2 class="subtitle is-size-6 has-text-primary has-text-left">De notre camping</h2>
-        </div>
-    </div>
+<section class="container margin-top-1 margin-bottom-1">
+  <div class="columns is-centered is-mobile">
+      <div class="column is-narrow has-text-centered">
+          <h1 class="title is-1 has-text-left">A propos</h1>
+          <h2 class="subtitle has-text-primary has-text-left">De notre camping</h2>
+      </div>
+  </div>
 </section>
 
-<section class="timeline is-centered margin-top-1 ovhi">
+<section class="timeline is-centered">
     <div class="timeline-item is-primary">
       <div class="timeline-marker is-primary is-icon">
         <i class="fas fa-plus"></i>
@@ -95,8 +95,8 @@
     </header>
 </section>
 
-<section class="container ovhi">
-    <div class="columns columns is-centered is-mobile">
+<section>
+    <div class="columns is-centered is-mobile">
         <div class="column is-half has-text-centered">
             <p class="heading has-text-centered margin-top-1">* Depuis plusieurs années, le camping des sources est engagé pour offrir à ses vacanciers une qualité de services toujours plus grande.
                 Le label Qualité Tourisme vient récompenser les efforts quotidiens de nos équipes sur la base d'audits mystères réguliers effectués par des cabinets indépendants *</p>
