--- a/views/index/inscription.ejs
+++ b/views/index/inscription.ejs
@@ -2,20 +2,36 @@
 
 <%- include('../includes/navbar'); -%>
 
-<script src="/js/notifications.js"></script>
-
-
-<section class="container margin-top-1 ovhi">
-    <div class="columns columns is-centered is-mobile">
+<section class="container margin-top-1 margin-bottom-1">
+    <div class="columns is-centered is-mobile">
         <div class="column is-narrow has-text-centered">
+            <h1 class="title is-1 has-text-left">Inscription</h1>
+            <h2 class="subtitle has-text-primary has-text-left">Créez votre compte</h2>
+        </div>
+    </div>
+</section>
 
-            <h1 class="title is-size-1 has-text-left">Inscription</h1>
-            <h2 class="subtitle is-size-6 has-text-primary has-text-left">Créez votre compte</h2>
+<section>
+    <% if(flash){ %>
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-3-desktop is-4-tablet is-6-mobile is-offset-3-mobile has-text-centered">
+                <div class="notification is-<%= flash.type %>">
+                    <button class="delete"></button>
+                    <%= locals.flash.text %>
+                </div>
+            </div>
+        </div>
+    <% } %>
+</section>
 
+
+<section>
+    <div class="columns is-centered">
+        <div class="column is-3-desktop is-4-tablet is-6-mobile is-offset-3-mobile has-text-centered">
             <form method="post">
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="text" placeholder="Nom" name="nom" required>  <!-- Nom -->
+                    <input class="input" type="text" placeholder="Nom" name="nom" required>
                     <span class="icon is-small is-left">
                         <i class="fas fa-user-friends"></i>
                     </span>
@@ -23,7 +39,7 @@
                 </div>
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="text" placeholder="Prénom" name="prenom" required>  <!-- Prenom -->
+                    <input class="input" type="text" placeholder="Prénom" name="prenom" required>
                     <span class="icon is-small is-left">
                         <i class="fas fa-user"></i>
                     </span>
@@ -31,7 +47,7 @@
                 </div>
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="email" placeholder="Email" name="email" required>  <!-- Email -->
+                    <input class="input" type="email" placeholder="Email" name="email" required>
                     <span class="icon is-small is-left">
                         <i class="fas fa-envelope"></i>
                     </span>
@@ -39,7 +55,7 @@
                 </div>
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="text" placeholder="Tel : 07 23 ..." name="telephone" required>  <!-- Telephone -->
+                    <input class="input" type="text" placeholder="Tel : 07 23 ..." name="telephone" required>
                     <span class="icon is-small is-left">
                         <i class="fas fa-phone"></i>
                     </span>
@@ -47,7 +63,7 @@
                 </div>
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="password" placeholder="Mot de passe" name="password" required>    <!-- Mot de passe -->
+                    <input class="input" type="password" placeholder="Mot de passe" name="password" required>
                     <span class="icon is-small is-left">
                         <i class="fas fa-lock"></i>
                     </span>                
@@ -55,33 +71,22 @@
                 </div>
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="password" placeholder="Confirmation mdp" name="confirm_password" required>    <!-- Confirmation du mot de passe -->
+                    <input class="input" type="password" placeholder="Confirmation mdp" name="confirm_password" required>
                     <span class="icon is-small is-left">
                         <i class="fas fa-lock"></i>
                     </span>                
                     </p>
                 </div>
                 <div class="control has-text-centered margin-button">
-                    <button type="submit" class="button is-rounded">S'inscrire</button>   <!-- S'inscrire -->
+                    <button type="submit" class="button is-primary is-small is-rounded is-outlined">S'inscrire</button>
+                    <a class="button is-secondary is-small is-rounded is-outlined" href="/connexion">J'ai déja un compte !</a>
                 </div>
-            </form>
-
-            <a href="/connexion" class="button is-primary is-inverted">J'ai déjà un compte !</a>  <!-- Deja encore de compte -->           
-        </div>
-    </div>
-    <div class="columns columns is-centered is-mobile">
-        <div class="column is-half has-text-centered">
-        <% if (locals.flash) { %>
-            <div class="notification is-<%= flash.type %>">
-                <button class="delete"></button>
-                <%= locals.flash.text %>
-            </div>
-            <%}%>
+            </form>          
         </div>
     </div>
 </section>
 
 
-
+<script src="/js/notifications.js"></script>
 
 <%- include('../includes/footer'); -%>
