--- a/views/index/mentions_legales.ejs
+++ b/views/index/mentions_legales.ejs
@@ -2,16 +2,16 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section class="container margin-top-1 ovhi">
-    <div class="columns columns is-centered is-mobile">
+<section class="container margin-top-1 margin-bottom-1">
+  <div class="columns is-centered is-mobile">
       <div class="column is-narrow has-text-centered">
-        <h1 class="title is-size-1 has-text-left">Polytech</h1>
-        <h2 class="subtitle is-size-6 has-text-primary has-text-left">Montpellier</h2>
+          <h1 class="title is-1 has-text-left">Polytech</h1>
+          <h2 class="subtitle has-text-primary has-text-left">Montpellier</h2>
       </div>
-    </div>
+  </div>
 </section>
 
-  <section class="columns is-centered margin-top-1 ovhi">
+  <section class="columns is-centered">
     <div class="column is-half">
         <article class="panel is-primary">
           <p class="panel-block is-active">
