--- a/views/index/notre_equipe.ejs
+++ b/views/index/notre_equipe.ejs
@@ -2,16 +2,16 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section class="container margin-top-1 ovhi">
-    <div class="columns columns is-centered is-mobile">
-        <div class="column is-narrow has-text-centered">
-            <h1 class="title is-size-1 has-text-left">Notre équipe</h1>
-            <h2 class="subtitle is-size-6 has-text-primary has-text-left">Ils travaillent ici</h2>
-        </div>
-    </div>
+<section class="container margin-top-1 margin-bottom-1">
+  <div class="columns is-centered is-mobile">
+      <div class="column is-narrow has-text-centered">
+          <h1 class="title is-1 has-text-left">Notre équipe</h1>
+          <h2 class="subtitle has-text-primary has-text-left">Ils travaillent ici</h2>
+      </div>
+  </div>
 </section>
 
-<section class="container margin-top-1 ovhi">
+<section>
     <div class="columns is-touch">
       <div class="column">
         <div class="card">
