--- a/views/index/reservation.ejs
+++ b/views/index/reservation.ejs
@@ -2,102 +2,94 @@
 
 <%- include('../includes/navbar'); -%>
 
-<div class="ovhi">
-    <section class="margin-top-1 margin-bottom-1 pad">
-        <form method="get" class="field is-horizontal-desktop" action="/reservation">
-            <div class="columns is-desktop is-centered has-text-centered">    
-                <div class="column is-narrow is-4-touch is-offset-4-touch">
-                    <h2 class="has-text-weight-semibold">Arrivée</h2>
-                    <input class="input is-small is-rounded" type="date" name="arrivee" id="arrivee" <% if (locals.arr) { %> value= <%= locals.arr %> <% } %> >
-                </div>
-                <div class="column is-narrow is-4-touch is-offset-4-touch">
-                    <h2 class="has-text-weight-semibold">Départ</h2>
-                    <input class="input is-small is-rounded" type="date" name="depart" id="depart" <% if (locals.dep) { %> value= <%= locals.dep %> <% } %>>
-                </div>
-                <div class="column is-narrow">
-                    <h2 class="has-text-weight-semibold">Hébergement</h2>  
-                    <div class="select is-small is-rounded">
-                        <select name="type" id="type">
-                            <option value="">-</option>
-                            <option value="tente" <% if (locals.type && locals.type == 'tente') { %> selected <% } %> >Emplacement tente</option>
-                            <option value="chalet" <% if (locals.type && locals.type == 'chalet') { %> selected <% } %> >Châlet</option>
-                            <option value="suite" <% if (locals.type && locals.type == 'suite') { %> selected <% } %> >Suite de luxe</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="column is-narrow">
-                    <h2 class="has-text-weight-semibold">Valider</h2>
-                    <button type="submit" class="button is-primary is-small is-rounded">Rechercher</button>
+<section class="container margin-top-1 margin-bottom-1">
+    <form method="get" class="field is-horizontal-desktop" action="/reservation">
+        <div class="columns is-desktop is-centered has-text-centered">    
+            <div class="column is-narrow is-6-touch is-offset-3-touch">
+                <h2 class="has-text-weight-semibold">Arrivée</h2>
+                <input class="input is-small is-rounded" type="date" name="arrivee" id="arrivee" <% if (locals.arr) { %> value= <%= locals.arr %> <% } %> >
+            </div>
+            <div class="column is-narrow is-6-touch is-offset-3-touch">
+                <h2 class="has-text-weight-semibold">Départ</h2>
+                <input class="input is-small is-rounded" type="date" name="depart" id="depart" <% if (locals.dep) { %> value= <%= locals.dep %> <% } %>>
+            </div>
+            <div class="column is-narrow">
+                <h2 class="has-text-weight-semibold">Hébergement</h2>  
+                <div class="select is-small is-rounded">
+                    <select name="type" id="type">
+                        <option value="">-</option>
+                        <option value="tente" <% if (locals.type && locals.type == 'tente') { %> selected <% } %> >Emplacement tente</option>
+                        <option value="chalet" <% if (locals.type && locals.type == 'chalet') { %> selected <% } %> >Châlet</option>
+                        <option value="suite" <% if (locals.type && locals.type == 'suite') { %> selected <% } %> >Suite de luxe</option>
+                    </select>
                 </div>
             </div>
-        </form>
-    </section>
-    
+            <div class="column is-narrow">
+                <h2 class="has-text-weight-semibold">Valider</h2>
+                <button type="submit" class="button is-primary is-small is-rounded">Rechercher</button>
+            </div>
+        </div>
+    </form>
+</section>
+
+<section>
+    <% if(locals.flash){ %>
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-4-desktop is-6-tablet is-10-mobile is-offset-1-mobile has-text-centered">
+                <div class="notification is-<%= flash.type %>">
+                    <button class="delete"></button>
+                    <%= locals.flash.text %>
+                </div>
+            </div>
+        </div>
+    <% } %>
+</section>
+
+<section>
     <% if (locals.rows) { %>
         <table>
             <% for(var i=0; i < rows.length; i++) { %>
-                <div class="columns">
-                    <div class="column is-4 is-offset-4">
-                      <div class="box">
-                        <% if (rows[i].nom) { %>
-                            <% if(rows[i].prestige == 1){ %>
-                                <div class="columns is-vcentered has-text-left is-mobile">
-                                    <div class="column is-2">
-                                        <span class="icon has-text-warning"><i class="fas fa-star fa-2x"></i></span>
-                                    </div>
-                                    <div class="column is-8">
-                                        <p class="title is-5">Suite de luxe : <span class="has-text-weight-light"><%= rows[i].nom %></span></p>
-                                    </div>
-                                    <div class="column is-2">
-                                        <a class="button is-small is-warning" href="/reservation/<%=rows[i].id%>">Voir</a>
-                                    </div>
-                                </div>
+                <div class="columns is-centered">
+                    <div class="column is-4-desktop is-6-tablet is-10-mobile is-offset-1-mobile">
+                        <div class="box">
+                            <% if (rows[i].nom) { %>
+                                <% if(rows[i].prestige == 1){ %>
+                                    <div class="columns is-vcentered is-mobile">
+                                        <div class="column is-2">
+                                            <i class="fas fa-star fa-2x has-text-primary"></i>
+                                        </div>
+                                        <div class="column is-8">
+                                            <p class="title is-5">Suite de luxe : <span class="has-text-weight-light"><%= rows[i].nom %></span></p>
+                                        </div>
+                                <% }else{ %>
+                                    <div class="columns is-vcentered is-mobile">
+                                        <div class="column is-2">
+                                            <i class="fas fa-home fa-2x has-text-primary"></i>
+                                        </div>
+                                        <div class="column is-8">
+                                            <p class="title is-5">Châlet : <span class="has-text-weight-light"><%= rows[i].nom %></span></p>
+                                        </div>
+                                <% } %>
                             <% }else{ %>
-                                <div class="columns is-vcentered has-text-left is-mobile">
+                                <div class="columns is-vcentered is-mobile">
                                     <div class="column is-2">
-                                        <span class="icon has-text-success"><i class="fas fa-home fa-2x"></i></span>
+                                        <i class="fab fa-pagelines fa-2x has-text-primary"></i>
                                     </div>
                                     <div class="column is-8">
-                                        <p class="title is-5">Châlet : <span class="has-text-weight-light"><%= rows[i].nom %></span></p>
+                                        <p class="title is-5">Emplacement n°<span class="has-text-weight-light"><%= rows[i].id %></span></p>
                                     </div>
-                                    <div class="column is-2">
-                                        <a class="button is-small is-success" href="/reservation/<%=rows[i].id%>">Voir</a>
-                                    </div>
-                                </div>
                             <% } %>
-                        <% }else{ %>
-                            <div class="columns is-vcentered has-text-left is-mobile">
-                                <div class="column is-2">
-                                    <span class="icon has-text-info"><i class="fab fa-pagelines fa-2x"></i></span>
-                                </div>
-                                <div class="column is-8">
-                                    <p class="title is-5">Emplacement n° <span class="has-text-weight-light"><%= rows[i].id %></span></p>
-                                </div>
-                                <div class="column is-2">
-                                    <a class="button is-small is-info" href="/reservation/<%=rows[i].id%>">Voir</a>
+                                <div class="column is-2 has-text-right">
+                                    <a class="button is-primary is-small is-rounded is-outlined" href="/emplacement/<%=rows[i].id%>">Voir</a>
                                 </div>
                             </div>
-                        <% } %>
-                      </div>
+                        </div>
                     </div>
                 </div>
             <% } %>
         </table>
     <%}%>
-    
-    
-    <div class="columns is-centered">
-        <div class="column is-4 has-text-centered">
-            <% if (locals.flash) { %>
-            <div class="notification is-<%= flash.type %>">
-                <button class="delete"></button>
-                <%= locals.flash.text %>
-            </div>
-            <%}%>
-        </div>
-    </div>
-
-</div>
+</section>
 
 <script src="/js/notifications.js"></script>
 
