--- a/views/index/tarifs.ejs
+++ b/views/index/tarifs.ejs
@@ -19,10 +19,7 @@
         <div class="plan-item">-</div>
       </div>
       <div class="plan-footer">
-        <form method="get">
-          <input name="name" value="emplacement" hidden>
-          <button class="button is-fullwidth" type="submit">Voir plus</button>
-        </form>
+        <a class="button is-fullwidth" type="submit">Choisir</a>
       </div>
     </div>
   
@@ -36,10 +33,7 @@
         <div class="plan-item">-</div>
       </div>
       <div class="plan-footer">
-        <form method="get">
-          <input name="name" value="Mobil-home" hidden>
-          <button class="button is-fullwidth" type="submit">Voir plus</button>
-        </form>
+        <a class="button is-fullwidth" type="submit">Choisir</a>
       </div>
     </div>
   
@@ -53,10 +47,7 @@
         <div class="plan-item">1 massage offert</div>
       </div>
       <div class="plan-footer">
-        <form method="get">
-          <input name="name" value="Chalet" hidden>
-          <button class="button is-fullwidth" type="submit">Voir plus</button>
-        </form>
+        <a class="button is-fullwidth" type="submit">Choisir</a>
       </div>
     </div>
 
