--- a/views/personnel/campeur_id.ejs
+++ b/views/personnel/campeur_id.ejs
@@ -2,23 +2,30 @@
 
 <%- include('../includes/navbarPersonnel'); -%>
 
-<div class="w-40">
-    <section class="container margin-top-1 has-text-centered">
-        <h1 class="title is-size-1">Campeur n°<span class="has-text-primary"><%=rows.id%></span></h1>
-    </section>
-
+<section class="container margin-top-1 margin-bottom-1">
+    <div class="columns is-centered is-mobile">
+        <div class="column is-narrow has-text-centered">
+            <h1 class="title is-1 has-text-left">Campeur</h1>
+            <h2 class="subtitle has-text-primary has-text-left">N°<%=rows.id%></h2>
+            <a class="button is-primary is-small is-rounded is-outlined" href="/personnel/campeurs/all">Tous les campeurs</a>
+        </div>
+    </div>
+</section>
     
-    <section class="margin-top-1">
-        <div class="card">
-            <div class="card-content">
-                <p class="is-size-4 has-text-weight-semibold">Nom : <span class="has-text-info has-text-weight-normal"><%=rows.nom%></span>
-                <p class="is-size-4 has-text-weight-semibold">Prenom : <span class="has-text-info has-text-weight-normal"><%=rows.prenom%></span>
-                <hr>
-                <p class="is-size-4 has-text-weight-semibold">Mail : <span class="has-text-info has-text-weight-normal"><%=rows.mail%></span>
-                <p class="is-size-4 has-text-weight-semibold">Telephone : <span class="has-text-info has-text-weight-normal"><%=rows.telephone%></span>
+<section>
+    <div class="columns is-centered">
+        <div class="column is-4-desktop is-6-tablet is-8-mobile is-offset-2-mobile">
+            <div class="card">
+                <div class="card-content">
+                    <p class="title is-5">Nom : <span class="has-text-primary has-text-weight-light"><%=rows.nom%></span>
+                    <p class="title is-5">Prenom : <span class="has-text-primary has-text-weight-light"><%=rows.prenom%></span>
+                    <hr>
+                    <p class="title is-5">Mail : <span class="has-text-primary has-text-weight-light"><%=rows.mail%></span>
+                    <p class="title is-5">Telephone : <span class="has-text-primary has-text-weight-light"><%=rows.telephone%></span>
+                </div>
             </div>
-          </div>
-    </section>
-</div>
+        </div>
+    </div>
+</section>
 
 <%- include('../includes/footer'); -%>
